--- a/app/src/main/res/layout/activity_new_post.xml
+++ b/app/src/main/res/layout/activity_new_post.xml
@@ -5,88 +5,106 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.activity.NewPostActivity">
-    <LinearLayout
+
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-        <Button
-            android:id="@+id/publish"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Publish"
-            android:layout_gravity="end"/>
-        <EditText
-            android:id="@+id/postText"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Your thoughts..."
-            android:textSize="24sp"
-            android:lines="6"
-            android:gravity="top|left">
-            <requestFocus />
-        </EditText>
-        <ImageView
-            android:id="@+id/image"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content" />
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:orientation="vertical">
-            <LinearLayout
+
+            <Button
+                android:id="@+id/publish"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:text="Publish" />
+
+            <EditText
+                android:id="@+id/postText"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:gravity="top|left"
+                android:hint="Your thoughts..."
+                android:lines="6"
+                android:textSize="24sp">
 
-                <Button
-                    android:id="@+id/btnImage"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_marginLeft="8dp"
-                    android:background="@drawable/image" />
+                <requestFocus />
+            </EditText>
 
-                <Button
-                    android:id="@+id/btnVideo"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_marginLeft="8dp"
-                    android:background="@drawable/ic_movie_black_24dp" />
-                <Button
-                    android:id="@+id/btnAudio"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_marginLeft="8dp"
-                    android:background="@drawable/audio"/>
+            <ImageView
+                android:id="@+id/image"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content" />
 
-            </LinearLayout>
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical">
 
-                <Button
-                    android:id="@+id/btnCameraImage"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_marginLeft="8dp"
-                    android:background="@drawable/ic_camera_alt_black_24dp" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/btnCameraVideo"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_marginLeft="8dp"
-                    android:background="@drawable/video" />
+                    <Button
+                        android:id="@+id/btnImage"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_marginLeft="8dp"
+                        android:background="@drawable/image" />
 
-                <Button
-                    android:id="@+id/btnMic"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_marginLeft="8dp"
-                    android:background="@drawable/ic_mic_black_24dp" />
+                    <Button
+                        android:id="@+id/btnVideo"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_marginLeft="8dp"
+                        android:background="@drawable/ic_movie_black_24dp" />
+
+                    <Button
+                        android:id="@+id/btnAudio"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_marginLeft="8dp"
+                        android:background="@drawable/audio" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/btnCameraImage"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_marginLeft="8dp"
+                        android:background="@drawable/ic_camera_alt_black_24dp" />
+
+                    <Button
+                        android:id="@+id/btnCameraVideo"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_marginLeft="8dp"
+                        android:background="@drawable/video" />
+
+                    <Button
+                        android:id="@+id/btnMic"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
+                        android:layout_marginLeft="8dp"
+                        android:background="@drawable/ic_mic_black_24dp" />
+                </LinearLayout>
+
             </LinearLayout>
-
         </LinearLayout>
-    </LinearLayout>
+    </ScrollView>
 
 </android.support.constraint.ConstraintLayout>
