--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -69,6 +69,13 @@
                     android:layout_marginLeft="4dp"
                     android:layout_gravity="center_vertical" />
 
+                <TextView
+                    android:id="@+id/fecha"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="15dp"
+                    android:layout_gravity="center_vertical" />
+
             </LinearLayout>
 
         </LinearLayout>
